<resources>
    <string name="app_name">AroundBelarus</string>
    <string name="for_test">Click me</string>
    <string name="hint_login">Login</string>
    <string name="hint_password">Password</string>
    <string name="Button_loginIn">Log in</string>
    <string name="Button_CreateAccount">Create new</string>
    <string name="AuthorTixtViev">Dont\'t have an account?</string>
    <string name="title_activity_all_app">AllAppActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="title_activity_all_struct">AllStruct</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_all_proj">All_Proj</string>
    <string name="title_activity_but">ActivityBut</string>
    <string name="title_activity_buton">ButonActiv</string>
</resources>